Cache null icons and remove them upon system icon theme change

Since Qt 6, qIconCache does not store null icons. In case an icon name
lookup is unsuccessful, the (expensive) lookup is repeated each time.

This patch reverts 9e7c5670509ac81efdf78b691e70e5ce3d408a09, which
removes a null icon from the cache once it has been found in the cache.
In fact, that could no longer happen due to
4dc7102c8410f5699af93b6c55ba1c7df7755bc2, which prevented null icons
from being cached at all. Therefore, it is also reverted by this patch.

The cache will be cleared when
- the system icon theme name changes or
- QGuiApplicationPrivate::processThemeChanged is called (e.g. due to
a change of the system's color scheme)

Fixes: QTBUG-112257
Change-Id: I80cd21fa39dc31c4bae60a8e66e78d9da20e9b4b
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 74a4f9cb057506f17ba6902964106f5b1d87ad98)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>